// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard component should increment the counter 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Hello world
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;

exports[`ProductCard component should render the component correctly 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Hello world
  </h1>
</div>
`;
